--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,8 @@
   "Email": {
     "Host": "smtp.gmail.com",
     "Port": "587",
-    "UserName": "",
-    "PassWord": ""
+    "UserName": "perlamaria9545@gmail.com",
+    "PassWord": "rwnhronjqhxiqqcb"
   },
   "Logging": {
     "LogLevel": {
@@ -13,7 +13,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-   "CadenaSql": "Server=.; database=MiPortafolioDB; Integrated Security=true;"
-
+  "cadenaSql": "Server=RYZEN\\SQLEXPRESS; database=MiPortafolioDB; Trusted_Connection=true; TrustServerCertificate=true"
   }
 }
